--- a/playbooks/roles/certs/defaults/main.yml
+++ b/playbooks/roles/certs/defaults/main.yml
@@ -11,7 +11,7 @@
 # Defaults for role certs
 #
 
-CERTS_QUEUE_URL: "http://localhost:18040"
+CERTS_QUEUE_URL: "192.168.56.101:18040"
 CERTS_BUCKET: ""
 # basic auth credentials for connecting
 # to the xqueue server
@@ -38,9 +38,9 @@ CERTS_LOCAL_PRIVATE_KEY: "example-private-key.txt"
 CERTS_REPO: "https://github.com/edx/read-only-certificate-code"
 CERTS_NGINX_PORT: 18090
 CERTS_WEB_ROOT: "{{ certs_data_dir }}/www-data"
-CERTS_URL: "http://localhost:{{ CERTS_NGINX_PORT }}"
-CERTS_DOWNLOAD_URL: "http://localhost:{{ CERTS_NGINX_PORT }}"
-CERTS_VERIFY_URL: "http://localhost:{{ CERTS_NGINX_PORT }}"
+CERTS_URL: "192.168.56.101:{{ CERTS_NGINX_PORT }}"
+CERTS_DOWNLOAD_URL: "192.168.56.101:{{ CERTS_NGINX_PORT }}"
+CERTS_VERIFY_URL: "192.168.56.101:{{ CERTS_NGINX_PORT }}"
 # Set to false if using s3 or if you don't want certificates
 # copied to the web root
 CERTS_COPY_TO_WEB_ROOT: true
